Further fix to modal positions and overflows

--- a/Erasmus/src/stylesheets/style.css
+++ b/Erasmus/src/stylesheets/style.css
@@ -710,11 +710,11 @@ a.btn i {
 }
 
 /* line 606, ../sass/style.scss */
-a.hazardBtn i {
+a i {
   margin: 7px 3px 0px 3px !important;
 }
 /* line 608, ../sass/style.scss */
-a.hazardBtn i.icon-plus-2 {
+a i.icon-plus-2 {
   margin: 7px 8px 0px 8px !important;
 }
 
